--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Mi primera página con Git Hub</h1>
     <hr>
-    <marquee behavior="Studio de Autor" direction=""></marquee>
+    <marquee>"Studio de Autor" </marquee>
     <img src="gtaterraza.jpeg" alt="Foto de Gta modo creador">
 </body>
 </html>
